Flare v1.07 (WIP, link soon)

Engine fixes:

Fixed GetText bug where fuzzy state from header wasn't being unset properly.

Translation updates:

* Brazilian Portuguese (pt_BR) by Vicente Monteiro



Flare v1.06 (http://flarerpg.org/index.php/2018/05/23/flare-1-06/)

Engine features:

* Allow modders to define a target screen DPI for resolution scaling.
* Added video option to toggle using DPI scaling.
* Add virtual joystick buttons for touchscreen devices.
* Add ability to make groups of map enemies invincible based on campaign status.

Engine fixes:

* Fixed performance flaw when "always show statbar labels" was enabled.
* Fix bug where incorrect Power menu tooltip was fetched when not using a mouse.

Game changes:

* Fix Torture Chambers quest breaking if the player skips the switch at the end.
* Fix being able to attack imprisoned enemies in Torture Chambers by making them invincible while the barriers are up.
* Reset Torture Chambers quest if it was finished without opening the barriers.

Translation updates:

* Spanish (es) update (Diego J. Romero López)
* Scottish Gaelic (gd) update (GunChleoc)



Flare v1.05 (http://flarerpg.org/index.php/2018/04/30/flare-1-05/)

Engine features:

* Tileset definitions now support multiple images. (Justin Jacobs)
* Display a message when unable to use a consumable item from the inventory. (Justin Jacobs)
* Add a hint to consumable/book tooltips to expose their interactable nature. (Justin Jacobs)
* Add ability to prevent certain powers from being placed on the actionbar. (Justin Jacobs)
* Multiple entries of "requires_item" and "requires_equipped_item" are now supported for Powers. (Justin Jacobs)
* Add "keep_buyback_on_map_change" to engine/misc.txt to disable saving the buyback between maps. (Justin Jacobs)
* Add "reward_loot" and "reward_loot_count" to Events for rewarding via loot tables. (Justin Jacobs)
* Support hidding the developer console title label. (Justin Jacobs)